# spaghetti

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  DemoStat.cc  DemoStat.hh  Dockerfile  README.md  main.cpp
codebase/: Class.cc  Class.hh  ClassRef.cc  ClassRef.hh  ClassTemplate.cc  ClassTemplate.hh  CodeBase.cc  CodeBase.hh  CppClass.cc  CppClass.hh  DataType.cc  DataType.hh  EditAction.cc  EditAction.hh  Entity.cc  Entity.hh  EntityMap.hh  EntityType.cc  EntityType.hh  EntityVec.cc  EntityVec.hh  Function.cc  Function.hh  Namespace.cc  Namespace.hh  ParentScope.cc  ParentScope.hh  ParentScopeImpl.hh  Project.cc  Project.hh  TypeAlias.cc  TypeAlias.hh  TypeDB.hh  TypeRef.cc  TypeRef.hh  Variable.cc  Variable.hh
codebase/test/: CodeBaseTest.cc  EntityVecTest.cc  Fixture.cc  Fixture.hh  LibToolingTest.cc  MockEntity.cc  MockEntity.hh  ProjectTest.cc  TemplateBaseClassTest.cc  TypeAliasTest.cc  TypeDefTest.cc  TypeRefTest.cc  UniquePtrTest.cc  ViewSetBaseClassTest.cc
codebase/test/testdata/: template_base.cc  test.cc  typedef.cc  unique_test.cc
doc/: .gitattributes  building.md  coding.md  spaghetti-2.json  spaghetti.json
docker/: Dockerfile
gui/: AboutBox.ui  ClassDiagramView.cc  ClassDiagramView.hh  ClassItem.cc  ClassItem.hh  CodeBaseTreeView.cc  CodeBaseTreeView.hh  Document.cc  Document.hh  EntityModel.cc  EntityModel.hh  MainWnd.cc  MainWnd.hh  MainWnd.ui  Model.cc  Model.hh  ModelViewFwd.hh  PreferenceBox.cc  PreferenceBox.hh  PreferenceBox.ui  ProjectModel.cc  ProjectModel.hh  ProjectSetting.cc  ProjectSetting.hh  ProjectSetting.ui  SendFunctorEvent.hh  SourceView.cc  SourceView.hh  Spaghetti-gui.cc  UMLClassItem.cc  UMLClassItem.hh  ViewSet.cc  ViewSet.hh  spaghetti.qrc
gui/class_diagram/: BaseItem.cc  BaseItem.hh  ClassItem.cc  ClassItem.hh  ClassModel.cc  ClassModel.hh  ClassView.cc  ClassView.hh  Edge.cc  Edge.hh  ItemType.hh  Model.cc  Model.hh  ModelBase.hh  SceneModel.cc  SceneModel.hh  View.cc  View.hh
gui/classgf/: BaseItem.cc  BaseItem.hh  ClassItem.cc  ClassItem.hh  ClassLayout.cc  ClassLayout.hh  ClassModel.cc  ClassModel.hh  ClassView.cc  ClassView.hh  Edge.cc  Edge.hh  ItemRenderingOptions.cc  ItemRenderingOptions.hh  ItemType.hh  Setting.cc  Setting.hh  Viewport.hh
gui/common/: CommonIO.cc  CommonIO.hh  MimeType.hh  ModelBase.hh  RaiiCursor.cc  RaiiCursor.hh  SendFunctorEvent.hh  SizeGripItem.cpp  SizeGripItem.h  ViewBase.hh
gui/logical_view/: LogicalModel.cc  LogicalModel.hh  Model.cc  Model.hh  ProxyModel.cc  ProxyModel.hh
gui/logicalvw/: LogicalModel.cc  LogicalModel.hh  ProxyModel.cc  ProxyModel.hh
gui/source_view/: Model.cc  Model.hh  SourceModel.cc  SourceModel.hh  SourceView.cc  SourceView.hh  View.cc  View.hh
gui/sourcevw/: SourceModel.cc  SourceModel.hh  SourceView.cc  SourceView.hh
gui/test/: ClassLayoutTest.cc  GuiUnitTest.cc
libclangxx/: DeleteWith.hh  Index.cc  Index.hh  XStr.cc  XStr.hh
libclx/: Cursor.cc  Cursor.hh  DeleteWith.hh  DumpAST.cc  Index.cc  Index.hh  SourceRange.cc  SourceRange.hh  Token.cc  Token.hh  Type.cc  Type.hh  XStr.cc  XStr.hh
project/: ClassDiagram.cc  ClassDiagram.hh  ModelBase.cc  ModelBase.hh  Project.cc  Project.hh
project/test/: ProjectTest.cc
resources/: resource.h  spaghetti.rc
util/: DeleteWith.hh  Exception.cc  Exception.hh  MultiContainer.hh  Visitor.hh
